@@ -1,18 +1,22 @@
 package company.evo.jmorphy2.nlp;
 
 import java.util.List;
-import java.util.Set;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.Collections;
+
+import com.google.common.base.Joiner;
+import com.google.common.base.Strings;
+import com.google.common.collect.Ordering;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.ImmutableList;
 
 import company.evo.jmorphy2.ParsedWord;
 
 
 public class Node {
-    public final Set<String> grammemeValues;
+    public final ImmutableSet<String> grammemeValues;
     public final String grammemeValuesStr;
-    public final List<Node> children;
+    public final ImmutableList<Node> children;
     public final ParsedWord parsed;
     public final String word;
     public final float score;
@@ -20,29 +24,24 @@ public class Node {
 
     public final long uniqueHash;
 
-    public Node(Set<String> grammemeValues, List<Node> children, float score) {
+    public Node(ImmutableSet<String> grammemeValues, ImmutableList<Node> children, float score) {
         this(grammemeValues, children, null, null, score);
     }
 
-    public Node(Set<String> grammemeValues, String word, float score) {
+    public Node(ImmutableSet<String> grammemeValues, String word, float score) {
         this(grammemeValues, null, null, word, score);
     }
 
-    public Node(Set<String> grammemeValues, ParsedWord parsed, float score) {
+    public Node(ImmutableSet<String> grammemeValues, ParsedWord parsed, float score) {
         this(grammemeValues, null, parsed, parsed.word, score);
     }
 
-    protected Node(Set<String> grammemeValues, List<Node> children, ParsedWord parsed, String word, float score) {
+    protected Node(ImmutableSet<String> grammemeValues, ImmutableList<Node> children, ParsedWord parsed, String word, float score) {
         if (grammemeValues == null) {
             throw new RuntimeException("grammemeValues must not be null");
         }
         this.grammemeValues = grammemeValues;
-        List<String> listGrammemeValues = new ArrayList<String>(grammemeValues.size());
-        for (String gramm : grammemeValues) {
-            listGrammemeValues.add(gramm);
-        }
-        Collections.sort(listGrammemeValues);
-        this.grammemeValuesStr = String.join(",", listGrammemeValues);
+        this.grammemeValuesStr = Joiner.on(",").join(Ordering.natural().sortedCopy(grammemeValues));
         this.children = children;
         this.parsed = parsed;
         this.word = word;
@@ -60,11 +59,11 @@ public class Node {
         return children == null;
     }
 
-    public List<Node> getChildren() {
+    public ImmutableList<Node> getChildren() {
         if (hasChildren()) {
             return children;
         }
-        return List.of();
+        return ImmutableList.of();
     }
 
     public int getChildrenSize() {
@@ -117,18 +116,9 @@ public class Node {
 
     @Override
     public String toString() {
-        List<String> childrenList = new ArrayList<String>();
-        if (children != null) {
-            for (Node child : children) {
-                childrenList.add(child.prettyToString(false, 1));
-            }
-        }
-        return String.format(
-            "(%s %s)",
-            grammemeValuesStr,
-            hasChildren() ? String.join(" ", childrenList) : word
-         ).replaceAll("\\n", "").replaceAll("( )+", " ").trim();
-
+        return String.format("(%s %s)",
+                             grammemeValuesStr,
+                             hasChildren() ? Joiner.on(" ").join(children) : word);
     }
 
     public String prettyToString() {
@@ -140,7 +130,7 @@ public class Node {
     }
 
     protected String prettyToString(boolean withScore, int level) {
-        String pad = level == 0 ? "" : String.format("\n%s", " ".repeat(level * 4));
+        String pad = level == 0 ? "" : String.format("\n%s", Strings.repeat(" ", level * 4));
         List<String> childrenStrings = new ArrayList<String>();
         for (Node child : getChildren()) {
             childrenStrings.add(child.prettyToString(withScore, level + 1));
@@ -153,13 +143,13 @@ public class Node {
         return String.format("%s(%s %s)%s",
                              pad,
                              grammemeValuesStr,
-                             hasChildren() ? String.join(" ", childrenStrings): word,
+                             hasChildren() ? Joiner.on(" ").join(childrenStrings): word,
                              addInfo);
     }
 
     public static class Top extends Node {
-        public Top(List<Node> children, float score) {
-            super(Set.of("TOP"), children, score);
+        public Top(ImmutableList<Node> children, float score) {
+            super(ImmutableSet.of("TOP"), children, score);
         }
     };
 }
